<resources>
    <string name="app_name">E-Commerce</string>
    <string name="home">Главная</string>
    <string name="about_us">Про нас</string>
    <string name="contact">Контакты</string>
    <string name="courses">Courses</string>
    <string name="app">App</string>
    <string name="img">img</string>
    <string name="start_study">Старт \nобучения:</string>
    <string name="level">\nУровень:</string>
    <string name="add_to_shop">Добавить \nв корзину</string>
    <string name="clear">Очистить</string>
    <string name="shop">Корзина</string>
</resources>