<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="20dp"
    android:layout_marginEnd="25dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/course_bg"
        android:orientation="vertical"
        android:background="@color/black"
        android:paddingBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/course_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img"
            android:transitionName="course_img"
            app:srcCompat="@drawable/ic_java"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/course_title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/start_study"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:id="@+id/course_start"
                    android:text="text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/level"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:id="@+id/course_level"
                    android:text="text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>